--- a/Parsing/pom.xml
+++ b/Parsing/pom.xml
@@ -11,5 +11,12 @@
 
     <artifactId>parsing</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
+    </dependencies>
+
 
 </project>
