--- a/Servlet/pom.xml
+++ b/Servlet/pom.xml
@@ -2,14 +2,23 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
+    <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <artifactId>startproject</artifactId>
         <groupId>startproject</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>servlet</artifactId>
+    <artifactId>Servlet</artifactId>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>startproject</groupId>
+            <artifactId>jdbc_dao</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
+    
 </project>
