--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <artifactId>startproject</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+
     <modules>
         <module>DB</module>
         <module>JDBC_DAO</module>
@@ -14,6 +15,7 @@
         <module>Parsing</module>
         <module>Servlet</module>
     </modules>
+
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -30,6 +32,16 @@
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
                 <version>4.12</version>
+            </dependency>
+            <dependency>
+                <groupId>com.sun.xml.bind</groupId>
+                <artifactId>jaxb-impl</artifactId>
+                <version>2.2.7</version>
+            </dependency>
+            <dependency>
+                <groupId>log4j</groupId>
+                <artifactId>log4j</artifactId>
+                <version>1.2.17</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
