--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
         <module>Logic</module>
         <module>Parsing</module>
         <module>Servlet</module>
+        <module>DTO</module>
+        <module>DTO</module>
     </modules>
 
     <dependencyManagement>
