--- a/Servlet/pom.xml
+++ b/Servlet/pom.xml
@@ -19,6 +19,11 @@
             <artifactId>jdbc_dao</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>startproject</groupId>
+            <artifactId>logic</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
     
 </project>
