--- a/Servlet/web/WEB-INF/web.xml
+++ b/Servlet/web/WEB-INF/web.xml
@@ -39,5 +39,14 @@
         <servlet-name>LoginServlet</servlet-name>
         <url-pattern>/LoginServlet</url-pattern>
     </servlet-mapping>
+
+    <servlet>
+        <servlet-name>GetGuitarBrandsServlet</servlet-name>
+        <servlet-class>GetGuitarBrandsServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>GetGuitarBrandsServlet</servlet-name>
+        <url-pattern>/GetGuitarBrandsServlet</url-pattern>
+    </servlet-mapping>
     
 </web-app>
