--- a/Logic/pom.xml
+++ b/Logic/pom.xml
@@ -27,6 +27,11 @@
             <artifactId>myUtils</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>startproject</groupId>
+            <artifactId>parsing</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
