--- a/JDBC_DAO/pom.xml
+++ b/JDBC_DAO/pom.xml
@@ -29,5 +29,10 @@
             <artifactId>dto</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>startproject</groupId>
+            <artifactId>myUtils</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
