--- a/Servlet/web/WEB-INF/web.xml
+++ b/Servlet/web/WEB-INF/web.xml
@@ -75,5 +75,14 @@
         <servlet-name>GetGuitarTypesServlet</servlet-name>
         <url-pattern>/GetGuitarTypesServlet</url-pattern>
     </servlet-mapping>
+
+    <servlet>
+        <servlet-name>SearchServlet</servlet-name>
+        <servlet-class>SearchServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>SearchServlet</servlet-name>
+        <url-pattern>/SearchServlet</url-pattern>
+    </servlet-mapping>
     
 </web-app>
